--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Broadway Design</title>
   </head>
 <body>
-  <div class="bigbanner" img "./Resources/images/the-flatiron-building.png">
+  <div class="bigbanner">
         <h1>Broadway Design</h1>
         <h3>
           <p>Home</p>
